# SpaceFighter

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md
docs/superpowers/plans/: 2026-05-14-ui-flow-system.md  2026-05-14-weighted-enemy-spawn.md
docs/superpowers/specs/: 2026-05-14-ui-flow-system-design.md  2026-05-14-weighted-enemy-spawn-design.md
src/: Config.h  EnemySystem.cpp  EnemySystem.h  EventBus.cpp  EventBus.h  Game.cpp  Game.h  GameUI.cpp  GameUI.h  MainScene.cpp  MainScene.h  MenuScene.cpp  MenuScene.h  Object.h  ParticleSystem.cpp  ParticleSystem.h  PowerUpSystem.cpp  PowerUpSystem.h  ResultScene.cpp  ResultScene.h  Scene.cpp  Scene.h  WaveSystem.cpp  WaveSystem.h  WeightedRandom.h  main.cpp
